# quarkie

./: .clang-format  .gitignore  CMakeLists.txt  README.md
.cache/clangd/index/: bitmap.hxx.BF25996AE5091563.idx  common_api.hxx.E1DF4CDA21CEB6E7.idx  file.hxx.55634108B557A73F.idx  free_space_tracker.cxx.E8CDD9C081C59DA7.idx  free_space_tracker.hxx.5F5EF6784F7E7D7E.idx  node.cxx.F88D215B430BDDE0.idx  parser.hxx.FE9A4E8A2A62C8A4.idx  paths.cxx.1B9F8DA77E931078.idx  superblock.cxx.2C3AB291375545FA.idx  superblock.hxx.C08530BD7856E854.idx
docs/: README.md  filesystem-common-description.md  on-disk-layout.md
inc/: cache.hxx  common_api.hxx  file.hxx  free_space_tracker.hxx  parser.hxx  quarkie_defs.hxx  superblock.hxx
inc/bitmap/: basic_bitmap.hxx  bitmap.hxx  pool.hxx
inc/hash_table/: hash.h  hash_table.h
inc/inode_struct/: directory_node.hxx  node.hxx
include/: bitmap.hpp  file.hpp  free_space_tracker.hpp  parser.hpp
include/bitmap/: bitmap.hpp
src/: bitmap.cpp  cache.cxx  free_space_tracker.cpp  free_space_tracker.cxx  hash.cxx  node.cpp  node.cxx  paths.cpp  paths.cxx  quarkie_common.cxx  superblock.cpp  superblock.cxx
testing/: .gitignore  CMakeCache.txt  CMakeLists.txt  bitmap-test2.cpp  bitmap.test.cpp  build.ninja  generate_string.py  hash-test.cxx  test_parser.cpp
testing/bitmap_search_function_tests/: CMakeLists.txt  main.cpp
testing/bitmap_tests/: CMakeLists.txt  pool_tests.cxx
testing/hash_function_tests/: CMakeLists.txt  generate_string.py  hash_test.cxx
